chore(build): Upgrades build.gradle.kts